--- a/H1EMU-Launcher/Language/StringResources.bg-BG.xaml
+++ b/H1EMU-Launcher/Language/StringResources.bg-BG.xaml
@@ -148,4 +148,14 @@
     <system:String x:Key="item155">Ключ за потвърждение</system:String>
     <system:String x:Key="item156">За да играете на сървърите  на H1emu, ви трябва ключ за потвърждение. Може да намерите този ключ в профила ви на:</system:String>
     <system:String x:Key="item157">Най -новата версия на сървъра е версия за разработка, имайте предвид, че може да е нестабилна и да причини сривове.\n\nИскате ли все пак да продължите?</system:String>
+    <system:String x:Key="item158">Welcome to H1Emu!</system:String>
+    <system:String x:Key="item159">BEFORE YOU BEGIN, please note that this project only supports the following game versions:</system:String>
+    <system:String x:Key="item160">15th January 2015</system:String>
+    <system:String x:Key="item161">and</system:String>
+    <system:String x:Key="item162">22nd December 2016</system:String>
+    <system:String x:Key="item163">Please</system:String>
+    <system:String x:Key="item164">DO NOT</system:String>
+    <system:String x:Key="item165">use the latest Steam version of the game or any other version that was not mentioned above as it will not work.</system:String>
+    <system:String x:Key="item166">Thank you and enjoy!</system:String>
+    <system:String x:Key="item167">CONTINUE</system:String>
 </ResourceDictionary>
