--- a/H1EMU-Launcher/Language/StringResources.tr-TR.xaml
+++ b/H1EMU-Launcher/Language/StringResources.tr-TR.xaml
@@ -158,4 +158,5 @@
     <system:String x:Key="item165">Steam'deki en son sürümünü veya oyunun yukarıda belirtilenlerden başka bir sürümünü inidirip kullanmayınız, aksi takdirde sistem çalışmayacaktır.</system:String>
     <system:String x:Key="item166">Teşekkürler, keyfinize bakın!</system:String>
     <system:String x:Key="item167">DEVAM ET</system:String>
+    <system:String x:Key="item168">Sunucu başlatılamadı, tekrar deneyin ve sorun devam ederse lütfen bildirin.</system:String>
 </ResourceDictionary>
