--- a/H1EMU-Launcher/Language/StringResources.en.xaml
+++ b/H1EMU-Launcher/Language/StringResources.en.xaml
@@ -158,4 +158,5 @@
     <system:String x:Key="item165">use the latest Steam version of the game or any other version that was not mentioned above as it will not work.</system:String>
     <system:String x:Key="item166">Thank you and enjoy!</system:String>
     <system:String x:Key="item167">CONTINUE</system:String>
+    <system:String x:Key="item168">Server failed to start, try again and if the issue persists please report it.</system:String>
 </ResourceDictionary>
