--- a/H1EMU-Launcher/Language/StringResources.pl-PL.xaml
+++ b/H1EMU-Launcher/Language/StringResources.pl-PL.xaml
@@ -158,4 +158,5 @@
     <system:String x:Key="item165">najnowszej wersji pobranej ze Steam, ani żadnej innej nie wymienionej powyżej, nie będą one działać.</system:String>
     <system:String x:Key="item166">Dziękujemy!</system:String>
     <system:String x:Key="item167">DALEJ</system:String>
+    <system:String x:Key="item168">Nie udało się uruchomić serwera, spróbuj ponownie, a jeśli problem będzie się powtarzał, zgłoś go.</system:String>
 </ResourceDictionary>
