--- a/H1EMU-Launcher/Language/StringResources.pt-PT.xaml
+++ b/H1EMU-Launcher/Language/StringResources.pt-PT.xaml
@@ -158,4 +158,5 @@
     <system:String x:Key="item165">use a última versão Steam do jogo ou qualquer outra versão que não tenha sido mencionada acima, pois não funcionará.</system:String>
     <system:String x:Key="item166">Obrigado e divirta-se!</system:String>
     <system:String x:Key="item167">CONTINUAR</system:String>
+    <system:String x:Key="item168">O servidor falhou ao iniciar, tente novamente e, se o problema persistir, informe-o.</system:String>
 </ResourceDictionary>
