--- a/H1EMU-Launcher/Language/StringResources.ru-RU.xaml
+++ b/H1EMU-Launcher/Language/StringResources.ru-RU.xaml
@@ -158,4 +158,5 @@
     <system:String x:Key="item165">используйте последнюю версию игры для Steam или любую другую версию, не упомянутую выше, так как это не сработает.</system:String>
     <system:String x:Key="item166">Спасибо и наслаждайтесь!</system:String>
     <system:String x:Key="item167">ПРОДОЛЖИТЬ</system:String>
+    <system:String x:Key="item168">Не удалось запустить сервер, попробуйте еще раз, и, если проблема не исчезнет, ​​сообщите об этом.</system:String>
 </ResourceDictionary>
