--- a/H1EMU-Launcher/Language/StringResources.en.xaml
+++ b/H1EMU-Launcher/Language/StringResources.en.xaml
@@ -122,7 +122,7 @@
     <system:String x:Key="item129">Contributors</system:String>
     <system:String x:Key="item130">Moderators</system:String>
     <system:String x:Key="item131">Support</system:String>
-    <system:String x:Key="item132">A special thanks to everyone who joined the community and kept the motivation alive!</system:String>
+    <system:String x:Key="item132">And a special thanks to everyone who joined the community and kept the motivation alive!</system:String>
     <system:String x:Key="item133">YES</system:String>
     <system:String x:Key="item134">NO</system:String>
     <system:String x:Key="item135">H1Z1: Just Survive</system:String>
@@ -159,4 +159,5 @@
     <system:String x:Key="item166">Thank you and enjoy!</system:String>
     <system:String x:Key="item167">CONTINUE</system:String>
     <system:String x:Key="item168">Server failed to start, try again and if the issue persists please report it.</system:String>
+    <system:String x:Key="item169">• Launcher made by @Eavilaswayce •</system:String>
 </ResourceDictionary>
