--- a/H1EMU-Launcher/Language/StringResources.fr.xaml
+++ b/H1EMU-Launcher/Language/StringResources.fr.xaml
@@ -159,4 +159,5 @@
     <system:String x:Key="item166">Merci et amusez-vous bien!</system:String>
     <system:String x:Key="item167">CONTINUER</system:String>
     <system:String x:Key="item168">Le serveur n'a pas pu démarrer, réessayez et si le problème persiste, veuillez le signaler.</system:String>
+    <system:String x:Key="item169">• Lanceur réalisé par @Eavilaswayce •</system:String>
 </ResourceDictionary>
