--- a/H1EMU-Launcher/Language/StringResources.nl-NL.xaml
+++ b/H1EMU-Launcher/Language/StringResources.nl-NL.xaml
@@ -158,4 +158,5 @@
     <system:String x:Key="item166">Bedankt en veel plezier!</system:String>
     <system:String x:Key="item167">VOLLGENDE</system:String>
     <system:String x:Key="item168">De server kan niet worden gestart, probeer het opnieuw en als het probleem aanhoudt, meld het dan.</system:String>
+    <system:String x:Key="item169">• Launcher gemaakt door @Eavilaswayce •</system:String>
 </ResourceDictionary>
