--- a/H1EMU-Launcher/Language/StringResources.pt-PT.xaml
+++ b/H1EMU-Launcher/Language/StringResources.pt-PT.xaml
@@ -159,4 +159,5 @@
     <system:String x:Key="item166">Obrigado e divirta-se!</system:String>
     <system:String x:Key="item167">CONTINUAR</system:String>
     <system:String x:Key="item168">O servidor falhou ao iniciar, tente novamente e, se o problema persistir, informe-o.</system:String>
+    <system:String x:Key="item169">• Lançador feito por @Eavilaswayce •</system:String>
 </ResourceDictionary>
