--- a/H1EMU-Launcher/Language/StringResources.ru-RU.xaml
+++ b/H1EMU-Launcher/Language/StringResources.ru-RU.xaml
@@ -159,4 +159,5 @@
     <system:String x:Key="item166">Спасибо и наслаждайтесь!</system:String>
     <system:String x:Key="item167">ПРОДОЛЖИТЬ</system:String>
     <system:String x:Key="item168">Не удалось запустить сервер, попробуйте еще раз, и, если проблема не исчезнет, ​​сообщите об этом.</system:String>
+    <system:String x:Key="item169">• Программа запуска от @Eavilaswayce •</system:String>
 </ResourceDictionary>
